--- a/assets/sass/page/_preview.scss
+++ b/assets/sass/page/_preview.scss
@@ -300,7 +300,7 @@
 	margin-bottom: 60px;
 
 	h2 {
-		font-family: Sail;
+		font-family: Agbalumo; 
 		font-size: 50px;
 		font-weight: 400;
 		margin: 0;
