--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -137,8 +137,9 @@ Version:        1.0.0
 	Fonts
 ----------------------------*/
 
-@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&family=Sail&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin Sans:wght@300;400;500;600;700;800;900&family=Sail&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Agbalumo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 /* 1.1 Theme Reset Style */
 
 html {
@@ -150,7 +151,7 @@ html {
 }
 
 body {
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     color: #5C5C5C;
     background-color: #fff;
     font-size: 18px;
@@ -1297,7 +1298,7 @@ a.ui-button:active,
     margin: 0 0 1.3em;
     position: relative;
     text-transform: capitalize;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     padding-bottom: 20px;
     font-weight: 600;
 }
@@ -1432,7 +1433,7 @@ a.ui-button:active,
     font-size: 25px;
     font-weight: 500;
     margin-bottom: 15px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .blog-sidebar .about-widget p {
@@ -1539,7 +1540,7 @@ a.ui-button:active,
     font-weight: 500;
     line-height: 1.3em;
     margin: 0 0 0.3em;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 1199px) {
@@ -1728,7 +1729,7 @@ a.ui-button:active,
     position: relative;
     text-transform: none;
     text-transform: uppercase;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-shop-sidebar>.widget+.widget {
@@ -1856,7 +1857,7 @@ a.ui-button:active,
 
 .wpo-shop-sidebar .widget_product_categories,
 .wpo-shop-sidebar .woocommerce-widget-layered-nav {
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-shop-sidebar .widget_product_categories .product-categories a,
@@ -1945,7 +1946,7 @@ a.ui-button:active,
     font-size: 18px;
     font-weight: 600;
     color: #5C5C5C;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .widget_best-seller .wpo-best-seller-item .wpo-best-seller-text span {
@@ -5514,7 +5515,7 @@ a.ui-button:active,
 }
 
 .static-hero-s3 .slide-sub-title h3 {
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 70px;
     font-style: normal;
     font-weight: 400;
@@ -6546,7 +6547,7 @@ a.ui-button:active,
     line-height: normal;
     color: #101010;
     text-transform: capitalize;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     margin-bottom: 20px;
 }
 
@@ -6916,7 +6917,7 @@ a.ui-button:active,
     font-style: normal;
     font-weight: 500;
     color: #657150;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 575px) {
@@ -14785,7 +14786,7 @@ a.ui-button:active,
     max-width: 453px;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     text-align: center;
     padding: 20px;
     -webkit-transition: all .3s;
@@ -15020,7 +15021,7 @@ a.ui-button:active,
     font-weight: 400;
     margin: 0;
     color: #5C5C5C;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     text-align: center;
 }
 
@@ -15810,7 +15811,7 @@ a.ui-button:active,
     font-size: 25px;
     font-style: normal;
     font-weight: 400;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     color: #5C5C5C;
 }
 
@@ -15860,7 +15861,7 @@ a.ui-button:active,
 
 .wpo-pricing-section .wpo-pricing-wrap .wpo-pricing-item .wpo-pricing-top .wpo-pricing-text h2 span {
     font-size: 18px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     display: inline-block;
     margin-left: 10px;
     margin-top: 20px;
@@ -16016,7 +16017,7 @@ a.ui-button:active,
     font-size: 30px;
     font-style: normal;
     font-weight: 400;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 767px) {
@@ -16601,7 +16602,7 @@ a.ui-button:active,
 .wpo-about-section-s2 .wpo-about-wrap .wpo-about-text h2 {
     font-size: 50px;
     font-weight: 500;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     margin-bottom: 30px;
 }
 
@@ -18333,7 +18334,7 @@ a.ui-button:active,
     font-size: 25px;
     font-style: normal;
     font-weight: 400;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 575px) {
@@ -19089,7 +19090,7 @@ a.ui-button:active,
 }
 
 .accordion-item h3 {
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
 }
 
@@ -19366,7 +19367,7 @@ a.ui-button:active,
     font-size: 30px;
     margin-bottom: 30px;
     font-weight: 500;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-p-details-section .process-wrap {
@@ -19383,7 +19384,7 @@ a.ui-button:active,
     font-size: 20px;
     font-weight: 500;
     margin-bottom: 10px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-p-details-section .process-wrap .process-item p {
@@ -19457,7 +19458,7 @@ a.ui-button:active,
 .wpo-faq-section h4 {
     font-size: 30px;
     margin-bottom: 30px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 500;
 }
 
@@ -21062,7 +21063,7 @@ a.ui-button:active,
     margin: 0;
     display: block;
     padding: 12px 20px 11px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     position: relative;
 }
 
@@ -21461,7 +21462,7 @@ a.ui-button:active,
     text-align: center;
     background: #eee;
     padding: 20px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .team-info-wrap ul {
@@ -21474,7 +21475,7 @@ a.ui-button:active,
 
 .exprience-wrap h2 {
     margin-bottom: 20px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 600;
 }
 
@@ -21770,7 +21771,7 @@ a.ui-button:active,
     font-weight: 600;
     color: #333333;
     margin-bottom: 30px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-contact-area .quote-form {
@@ -22203,7 +22204,7 @@ a.ui-button:active,
     font-size: 2.26667rem;
     line-height: 1.2em;
     margin: -0.27em 0 0.7em;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 500;
 }
 
@@ -22244,7 +22245,7 @@ a.ui-button:active,
     text-decoration: underline;
     color: #5C5C5C;
     text-transform: capitalize;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
 }
 
@@ -22585,7 +22586,7 @@ a.ui-button:active,
     font-size: 2.33333rem;
     margin: -0.22em 0 0.7em;
     line-height: 1.3em;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 500;
 }
 
@@ -23040,7 +23041,7 @@ a.ui-button:active,
     margin: 0 0 1em;
     text-transform: uppercase;
     letter-spacing: 3px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 991px) {
@@ -23085,7 +23086,7 @@ a.ui-button:active,
 }
 
 .wpo-blog-single-section .comments-area .comments-meta h4 {
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 18px;
     font-size: 1.2rem;
     color: #101010;
@@ -23101,7 +23102,7 @@ a.ui-button:active,
     text-transform: none;
     display: inline-block;
     padding-left: 5px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 767px) {
@@ -23119,7 +23120,7 @@ a.ui-button:active,
     text-align: center;
     border-radius: 50px;
     display: inline-block;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     text-decoration: underline;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -23139,7 +23140,7 @@ a.ui-button:active,
     margin: 0 0 1.5em;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 991px) {
@@ -23377,7 +23378,7 @@ a.ui-button:active,
 .wpo-contact-pg-section form .submit-area .theme-btn,
 .wpo-contact-pg-section form .submit-area .view-cart-btn {
     border-radius: 0px;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
 }
 
@@ -23453,7 +23454,7 @@ a.ui-button:active,
     font-size: 30px;
     font-weight: 500;
     margin: 20px 0;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-contact-pg-section .office-info .office-info-item .office-info-text p {
@@ -24038,7 +24039,7 @@ a.ui-button:active,
     font-size: 26px;
     margin: 0;
     color: #101010;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 991px) {
@@ -24396,7 +24397,7 @@ a.ui-button:active,
     font-weight: 400;
     margin: 10px 0;
     color: #101010;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 .wpo-features-section .wpo-features-item .wpo-features-text p {
@@ -24608,7 +24609,7 @@ a.ui-button:active,
 .pthumb h2 span {
     font-size: 22px;
     display: block;
-    font-family: "Jost", sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     position: relative;
     left: -4px;
 }
