--- a/assets/sass/helpers/_variables.scss
+++ b/assets/sass/helpers/_variables.scss
@@ -1,13 +1,13 @@
 /*---------------------------
 	Fonts
 ----------------------------*/
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;700;800;900&family=Sail&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin Sans:wght@300;400;500;600;700;800;900&family=Sail&display=swap');
 
 
 
 // fonts
 $base-font-size: 15;
-$base-font: 'Jost', sans-serif;
+$base-font: 'Josefin Sans', sans-serif;
 $heading-font: 'Sail', cursive;
 
 
